Alterações na página adcionar visita

--- a/cp html/adicionar visita/index.html
+++ b/cp html/adicionar visita/index.html
@@ -46,7 +46,7 @@
       <div class="v43_238"></div>
       <span class="v43_239">Sobre o prontuário</span
       ><span class="v43_240"
-        >Nosso prontuário foi desenvolvido pensando na praticidade tanto de
+        >O nosso prontuário foi desenvolvido pensando na praticidade tanto de
         você, cliente quanto de nossos mecânicos para um processo de manutenção
         do veículo mais ágil. Basta adicionar as informações de sua última
         visita ao mecânico para que na próxima visita ao profissional, você
