alteração da pagina login, colocando a imagem

--- a/cp html/sign-in/index.html
+++ b/cp html/sign-in/index.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link
-      href="https://fonts.googleapis.com/css?family=Inter&display=swap"
-      rel="stylesheet"
-    />
-    <link href="./css/main.css" rel="stylesheet" />
-    <title>Document</title>
-  </head>
-  <body>
-    <div class="v26_167">
-      <div class="v26_168"></div>
-      <span class="v26_169">Sign-in</span><span class="v26_170">Mecânico</span
-      ><span class="v26_171">Cliente</span>
-      <div class="v26_172"></div>
-      <div class="v26_173"></div>
-      <span class="v26_174">E-mail</span>
-      <div class="v26_175"></div>
-      <span class="v26_176">E-mail</span
-      ><span class="v26_177">Código porto mecânico</span>
-      <div class="v26_178"></div>
-      <span class="v26_179">Código porto cliente</span>
-      <div class="v26_180"></div>
-      <span class="v26_181">*O que é código porto?</span>
-      <div class="v26_182"></div>
-      <div class="v26_183"></div>
-      <span class="v26_184">Entrar</span><span class="v26_185">Entrar</span>
+
+<head>
+  <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet" />
+  <link href="./css/main.css" rel="stylesheet" />
+  <title>Sign-In</title>
+</head>
+
+<body>
+  <div class="login-container">
+    <div class="form-section">
+      <div class="logo"></div>
+      <span class="title">Sign-in</span>
+      <span class="section-title">Mecânico</span>
+      <div class="input-box"></div>
+      <span class="label">E-mail</span>
+      <div class="input-box"></div>
+      <span class="label">Código porto mecânico</span>
+      <div class="button">Entrar</div>
+
+      <span class="section-title">Cliente</span>
+      <div class="input-box"></div>
+      <span class="label">E-mail</span>
+      <div class="input-box"></div>
+      <span class="label">Código porto cliente</span>
+      <div class="button">Entrar</div>
+
+      <span class="helper-text">*O que é código porto?</span>
     </div>
-  </body>
+    <div class="image-section"></div>
+  </div>
+</body>
+
 </html>
