--- a/cp html/Meu Perfil/index.html
+++ b/cp html/Meu Perfil/index.html
@@ -1,75 +1,61 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link
-      href="https://fonts.googleapis.com/css?family=Inter&display=swap"
-      rel="stylesheet"
-    />
-    <link href="./css/main.css" rel="stylesheet" />
-    <title>Document</title>
-  </head>
-  <body>
-    <div class="v26_190">
-      <div class="v26_246"></div>
-      <div class="v26_239"></div>
-      <div class="v109_256"></div>
-      <div class="v26_197"></div>
-      <span class="v26_204">Mecânicos próximos</span
-      ><span class="v26_207">Reserva de peças</span
-      ><span class="v26_221">Tipo de Seguro</span
-      ><span class="v26_237">Oi, José!</span
-      ><span class="v26_238">Saúde - São Paulo - SP </span
-      ><span class="v26_244">Seguro auto</span
-      ><span class="v26_220">Veículos</span>
-      <div class="v26_224"></div>
-      <div class="v31_2"></div>
-      <span class="v26_228">Civic </span><span class="v31_3">Hilux</span
-      ><span class="v26_255">Honda</span><span class="v31_4">Toyota</span
-      ><span class="v29_261">Placa: ABC125A3</span>
-      <div class="name"></div>
-      <div class="name"></div>
-      <span class="v29_262">Cor: Preto</span
-      ><span class="v32_13">Cor: Branco</span
-      ><span class="v26_257">Ano 2009</span><span class="v31_6">Ano 2022</span
-      ><span class="v29_264">Câmbio: Manual</span
-      ><span class="v32_10">Câmbio: Automático</span
-      ><span class="v26_258">Última visita ao mecânico: 15/10/2023</span
-      ><span class="v31_7">Última visita ao mecânico: 10/05/2023</span
-      ><span class="v29_259">Tipo de combustível: Etanol</span
-      ><span class="v32_8">Tipo de combustível: Gasolina</span>
-      <div class="v107_238"></div>
-      <div class="v107_248"></div>
-      <span class="v107_239">Hilux</span><span class="v107_240">Toyota</span
-      ><span class="v107_241">Placa: ABC125A3</span>
-      <div class="name"></div>
-      <span class="v107_243">Cor: Branco</span
-      ><span class="v107_244">Ano 2022</span
-      ><span class="v107_245">Câmbio: Automático</span
-      ><span class="v107_246">Última visita ao mecânico: 10/05/2023</span
-      ><span class="v107_247">Tipo de combustível: Gasolina</span
-      ><span class="v32_9">Placa: XPT1234</span>
-      <div class="v41_48">
-        <div class="v41_49">
-          <div class="v41_50"></div>
-          <div class="v41_51"></div>
-        </div>
+
+<head>
+  <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet" />
+  <link href="/cp html/css/meu-perfil.css" rel="stylesheet" />
+  <title>Document</title>
+</head>
+
+<body>
+  <div class="v26_190">
+    <div class="v26_246"></div>
+    <div class="v26_239"></div>
+    <div class="v109_256"></div>
+    <div class="v26_197"></div>
+    <span class="v26_204">Mecânicos próximos</span><span class="v26_207">Reserva de peças</span><span
+      class="v26_221">Tipo de Seguro</span><span class="v26_237">Oi, José!</span><span class="v26_238">Saúde - São Paulo
+      - SP </span><span class="v26_244">Seguro auto</span><span class="v26_220">Veículos</span>
+    <div class="v26_224"></div>
+    <div class="v31_2"></div>
+    <span class="v26_228">Civic </span><span class="v31_3">Hilux</span><span class="v26_255">Honda</span><span
+      class="v31_4">Toyota</span><span class="v29_261">Placa: ABC125A3</span>
+    <div class="name"></div>
+    <div class="name"></div>
+    <span class="v29_262">Cor: Preto</span><span class="v32_13">Cor: Branco</span><span class="v26_257">Ano
+      2009</span><span class="v31_6">Ano 2022</span><span class="v29_264">Câmbio: Manual</span><span
+      class="v32_10">Câmbio: Automático</span><span class="v26_258">Última visita ao mecânico: 15/10/2023</span><span
+      class="v31_7">Última visita ao mecânico: 10/05/2023</span><span class="v29_259">Tipo de combustível:
+      Etanol</span><span class="v32_8">Tipo de combustível: Gasolina</span>
+    <div class="v107_238"></div>
+    <div class="v107_248"></div>
+    <span class="v107_239">Hilux</span><span class="v107_240">Toyota</span><span class="v107_241">Placa: ABC125A3</span>
+    <div class="name"></div>
+    <span class="v107_243">Cor: Branco</span><span class="v107_244">Ano 2022</span><span class="v107_245">Câmbio:
+      Automático</span><span class="v107_246">Última visita ao mecânico: 10/05/2023</span><span class="v107_247">Tipo de
+      combustível: Gasolina</span><span class="v32_9">Placa: XPT1234</span>
+    <div class="v41_48">
+      <div class="v41_49">
+        <div class="v41_50"></div>
+        <div class="v41_51"></div>
       </div>
-      <div class="v107_235"></div>
-      <div class="v26_240">
-        <div class="v26_241"></div>
-        <div class="v26_242"></div>
-      </div>
-      <div class="v107_237"></div>
-      <div class="v107_253">
-        <div class="v107_254"></div>
-        <div class="v107_255"></div>
-      </div>
-      <div class="v109_258"></div>
-      <span class="v109_259">Perfil</span
-      ><span class="v109_261"
-        >Aqui no seu perfil você poderá ver e adicionar seus veículos, além de
-        visualizar seu plano de seguro e localização!
-      </span>
     </div>
-  </body>
+    <div class="v107_235"></div>
+    <div class="v26_240">
+      <div class="v26_241"></div>
+      <div class="v26_242"></div>
+    </div>
+    <div class="v107_237"></div>
+    <div class="v107_253">
+      <div class="v107_254"></div>
+      <div class="v107_255"></div>
+    </div>
+    <div class="v109_258"></div>
+    <span class="v109_259">Perfil</span><span class="v109_261">Aqui no seu perfil você poderá ver e adicionar seus
+      veículos, além de
+      visualizar seu plano de seguro e localização!
+    </span>
+  </div>
+</body>
+
 </html>
