--- a/cp html/mecanico peças/index.html
+++ b/cp html/mecanico peças/index.html
@@ -1,74 +1,62 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link
-      href="https://fonts.googleapis.com/css?family=Inter&display=swap"
-      rel="stylesheet"
-    />
-    <link href="./css/main.css" rel="stylesheet" />
-    <title>Document</title>
-  </head>
-  <body>
-    <div class="v88_35">
-      <div class="v91_86"></div>
-      <div class="v88_36"></div>
-      <div class="v88_37"></div>
-      <span class="v89_73">Mecânicos próximos que possuem a peça</span>
-      <div class="v91_85"></div>
-      <div class="v89_74"></div>
-      <div class="v101_4"></div>
-      <div class="v104_27"></div>
-      <div class="v101_5"></div>
-      <span class="v89_76"
-        >Jogo Pastilha Freio Dianteiro Honda Civic Original Bosch</span
-      ><span class="v102_6"
-        >Jogo Pastilha Freio Dianteiro Civic 2007 2008 2009 Bosch</span
-      >
-      <div class="v102_15"></div>
-      <span class="v91_78">Centro Automotivo Porto Seguro Conceição</span
-      ><span class="v91_79"
-        >Av. Diederichsen, 1426 - Vila Guarani (Zona Sul), São Paulo - SP,
-        04310-001, Brasil</span
-      ><span class="v91_80">R$ 117,90</span><span class="v102_7">R$ 126,90</span
-      ><span class="v102_23">R$ 365,90</span>
-      <div class="v91_84"></div>
-      <div class="v91_88"></div>
-      <div class="v102_16"></div>
-      <div class="v91_90"></div>
-      <span class="v91_89">Reservar</span>
-      <div class="v102_8"></div>
-      <span class="v102_9">Reservar</span>
-      <div class="v102_24"></div>
-      <span class="v102_25">Reservar</span
-      ><span class="v102_4">Centro automotivo Porto Seguro</span
-      ><span class="v102_5"
-        >Av. José Maria Whitaker - Planalto Paulista, São Paulo - SP, 04064-030,
-        Brasil</span
-      ><span class="v102_19">Centro Automotivo Porto Seguro</span
-      ><span class="v102_20"
-        >R. França Pinto, 1115 - Vila Mariana, São Paulo - SP, 04016-034,
-        Brasil</span
-      ><span class="v102_22"
-        >Pastilha Freio Civic 2013 2014 2015 2016 Diant E Tras Frasle</span
-      >
-      <div class="v104_26"></div>
-      <div class="v104_28"></div>
-      <div class="v104_29"></div>
-      <span class="v104_30">Mecânicos próximos que possuem a peça</span
-      ><span class="v104_31">Preço: Do mais barato ao mais caro</span>
-      <div class="v104_32">
-        <div class="v104_33"></div>
-        <div class="v104_34">
-          <div class="v104_35"></div>
-          <div class="v104_36"></div>
-          <div class="v104_37"></div>
-        </div>
-      </div>
-      <span class="v109_272">Reserva de peças</span>
-      <div class="v109_273">
-        <div class="v109_274"></div>
-        <div class="v109_275"></div>
+
+<head>
+  <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet" />
+  <link href="/cp html/css/mecanico-pecas.css" rel="stylesheet" />
+  <title>Document</title>
+</head>
+
+<body>
+  <div class="v88_35">
+    <div class="v91_86"></div>
+    <div class="v88_36"></div>
+    <div class="v88_37"></div>
+    <span class="v89_73">Mecânicos próximos que possuem a peça</span>
+    <div class="v91_85"></div>
+    <div class="v89_74"></div>
+    <div class="v101_4"></div>
+    <div class="v104_27"></div>
+    <div class="v101_5"></div>
+    <span class="v89_76">Jogo Pastilha Freio Dianteiro Honda Civic Original Bosch</span><span class="v102_6">Jogo
+      Pastilha Freio Dianteiro Civic 2007 2008 2009 Bosch</span>
+    <div class="v102_15"></div>
+    <span class="v91_78">Centro Automotivo Porto Seguro Conceição</span><span class="v91_79">Av. Diederichsen, 1426 -
+      Vila Guarani (Zona Sul), São Paulo - SP,
+      04310-001, Brasil</span><span class="v91_80">R$ 117,90</span><span class="v102_7">R$ 126,90</span><span
+      class="v102_23">R$ 365,90</span>
+    <div class="v91_84"></div>
+    <div class="v91_88"></div>
+    <div class="v102_16"></div>
+    <div class="v91_90"></div>
+    <span class="v91_89">Reservar</span>
+    <div class="v102_8"></div>
+    <span class="v102_9">Reservar</span>
+    <div class="v102_24"></div>
+    <span class="v102_25">Reservar</span><span class="v102_4">Centro automotivo Porto Seguro</span><span
+      class="v102_5">Av. José Maria Whitaker - Planalto Paulista, São Paulo - SP, 04064-030,
+      Brasil</span><span class="v102_19">Centro Automotivo Porto Seguro</span><span class="v102_20">R. França Pinto,
+      1115 - Vila Mariana, São Paulo - SP, 04016-034,
+      Brasil</span><span class="v102_22">Pastilha Freio Civic 2013 2014 2015 2016 Diant E Tras Frasle</span>
+    <div class="v104_26"></div>
+    <div class="v104_28"></div>
+    <div class="v104_29"></div>
+    <span class="v104_30">Mecânicos próximos que possuem a peça</span><span class="v104_31">Preço: Do mais barato ao
+      mais caro</span>
+    <div class="v104_32">
+      <div class="v104_33"></div>
+      <div class="v104_34">
+        <div class="v104_35"></div>
+        <div class="v104_36"></div>
+        <div class="v104_37"></div>
       </div>
     </div>
-  </body>
+    <span class="v109_272">Reserva de peças</span>
+    <div class="v109_273">
+      <div class="v109_274"></div>
+      <div class="v109_275"></div>
+    </div>
+  </div>
+</body>
+
 </html>
